Seperated beneficiaries into seperate Model and added admin page to manage them

--- a/static/screen.css
+++ b/static/screen.css
@@ -85,8 +85,8 @@ a:visited {color:#000;}
 
 .campaignCheckout {margin: 10px 0 30px 10px}
 .campaignCheckout h4 {margin-bottom: 5px}
-.campaignCheckout img {float:left;margin: 0 10px 0 30px}
-.campaignLinks {height:37px;width:300px;overflow:auto;float:left;color:#CCC}
+.campaignCheckout img {float:left;margin: 0 0 0 30px}
+.campaignLinks {height:37px;width:300px;overflow:auto;float:left;color:#CCC;margin-left:30px}
 .campaignLinks a {color:#CCC;font-size:0.9em}
 
 /* Button Styling */
