--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,7 +26,7 @@ All donations deleted for {{ deletedlink|urlizetrunc:45 }}
 
 
 <p>
-<div>Total pledged: <strong>{{pledged}}p</strong></div>
+<div>You have pledged a total of <strong>{{pledged}}p</strong>.</div>
 
 {% ifnotequal pledged 0 %}
 <a href="/checkout" title="Go to Checkout" class="sexybutton"><span><span><span class="checkout">Checkout</span></span></span></a>
