--- a/templates/setbeneficiaries.html
+++ b/templates/setbeneficiaries.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+<a href="/admin/managebeneficiaries">Manage Beneficiaries</a>
+
 <h1>Campaigns where the beneficiary needs clarifying</h1>
 
 {% if ko_campaigns|length %}
@@ -13,7 +15,14 @@
         <span class="amount">{{ c.count }}p</span>
         {{ c.link|urlizetrunc:60 }}
         <div style="padding: 2px 0 0 25px;">
-        <a href="/setbeneficiary?link={{ c.link }}" title="Suggest a beneficiary" class="sexybutton"><span><span><span class="useradd">Suggest beneficiary details</span></span></span></a>
+        <form action="/admin/setbeneficiary" method="get">
+          <input type="hidden" name="link" value="{{c.link}}" />
+          google_user: <input type="text" name="google_user" style="width:200px" value="" />
+          <button class="sexybutton" type="submit" ><span><span><span class="useradd">Set</span></span></span></button>
+        </form>
+        <!--
+        <a href="/admin/setbeneficiary?link={{ c.link }}" title="Suggest a beneficiary" class="sexybutton"><span><span><span class="useradd">Suggest beneficiary details</span></span></span></a>
+        -->
         </div>
     </div>
   {% endfor %}
