Interim commit - nothing major changed

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,9 @@ We'd like to thank:
 
  <ul>
  <li><em>Famfamfam</em>, for their <a href="http://www.famfamfam.com/lab/icons/silk/">Silk icon set</a>.</li>
- <li>Pixelmixer for their <a href="http://pixel-mixer.com">free icons</a>.
+ <li>Pixelmixer for their <a href="http://pixel-mixer.com">free icons</a>.</li>
+ <li><a href="http://sexybuttons.googlecode.com">Sexybuttons</a>, for their CSS code</li>
+ <li><a href="http://demand.openid.net/about">Demand.Openid</a>, for their <a href="http://code.google.com/p/demand/">App Engine sourcecode</a></li>
  </ul>
 
 
