--- a/templates/faq.html
+++ b/templates/faq.html
@@ -39,6 +39,14 @@ Diddydonation.com is specifically for really small donations (<em>one penny</em>
 </p>
 
 
+<h3><a name="amounttoolow"></a>What does it mean when it says "<em>amount too low</em>" at the Checkout</h3>
+<p>
+In order to make a real monetary donation to a webpage we need the total donation amount by everyone that used Diddydonation.com to reach a non-loss sum.
+The current non-loss sum is &pound;10 which is the amount we deem worth the effort of making the transaction and where bank/paypal fees doesn't have too large a impact.
+Until this sum has been reached by the community, the checkout will say "<em>amount too low</em>".
+</p>
+
+
 <h3>How do I give a larger donation?</h3>
 <p>
 There are plenty of other donations websites that accept normal donations:
