--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <span>
         Pledge a one penny donation to any webpage that you find interesting, useful or fun.
         {% if not lip %}
-         <a href="{{ login_url }}" style="text-decoration:underline;" class="good">Login to get started &rarr;</a>
+         <a href="{{ login_url }}" class="good">Login to get started &rarr;</a>
         {% endif %}
         </span>
     </div>
