--- a/static/screen.css
+++ b/static/screen.css
@@ -3,20 +3,19 @@
 html{color:#333;background:#FFF}
 body,div,dl,dt,dd,ul,ol,li,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0}
 table{border-collapse:collapse;border-spacing:0}
-fieldset,img{border:0}
+fieldset,img{border-bottom:0}
 address,caption,cite,code,dfn,th,var,optgroup{font-style:inherit;font-weight:inherit}
 del,ins{text-decoration:none}
 li{list-style:none}
 caption,th{text-align:left}
 h1,h2,h3,h4,h5,h6{font-size:100%;margin:0;padding:0;font-weight:bold}
 q:before,q:after{content:''}
-abbr,acronym{border:0;font-variant:normal}
+abbr,acronym{border-bottom:0;font-variant:normal}
 sup{vertical-align:baseline}
 sub{vertical-align:baseline}
 legend{color:#000}
 input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit}
 input,button,textarea,select{*font-size:100%}
-
 
 /* Element styling (a.k.a base) */
 
@@ -36,23 +35,32 @@ th,td {border:1px solid #000;padding:.5em}
 th {font-weight:bold;text-align:center}
 p,fieldset,table { margin-bottom:1em}
 
+/*
 a {color:#000;}
-a:hover {text-decoration:underline;}
+a:hover {color:#89605a;}
 a:visited {color:#000;}
+*/
+
+a {color:#000;text-decoration:none;border-bottom:1px solid #CCC;}
+/*a:hover {text-decoration:underline;}*/
+a:hover {border-bottom:1px solid green}
+a:active { position: relative;top: 1px}
+a:visited {color:#000;}
+
 
 #bookmarklet {width: 15em;padding:.5em;margin-right:0;margin-top:2em;border: 1px solid #000;}
 #wrap {margin: 0 auto;width:600px;}
-#logo {float:left;}
+#logo img {float:left;}
 #moto {float:left;margin-left:20px;}
 #intro {margin-bottom:20px;}
 #content {margin-left:.5em;}
 #error {color:red; font-size:1.8em;font-weight:bold;}
 #lip {float:right;}
 #header {  border: 4px solid #89605a;padding:10px;margin-bottom:20px;}
-#header a {color:#000;}
+#header h1 a {color:#000;border-bottom:0}
 #goback {margin-bottom:1em;}
-#footer {margin-top:2em;}
-#footer a {color:#999;}
+#footer {margin-top:2em;border-top: 4px solid #89605a;}
+#footer a {color:#999;border-bottom:0}
 
 /* Style Toolbox */
 
@@ -72,7 +80,8 @@ a:visited {color:#000;}
 .failure {background:#EEF4D4 url("images/icons/exclamation.png") center left no-repeat;color:#99A758;border:1px solid red}
 
 .showClosed {padding-left: 18px; background:url("images/icons/block.png") no-repeat center left}
-
+.moreInfo {font-size:0.6em;padding-right: 18px; background:url("images/icons/help.png") no-repeat center right}
+.moreInfo a {color:green}
 
 .column {float:left;overflow:hidden;}
 .subtle, a.subtle {color:#999;}
@@ -86,8 +95,8 @@ a:visited {color:#000;}
 .campaignCheckout {margin: 10px 0 30px 10px}
 .campaignCheckout h4 {margin-bottom: 5px}
 .campaignCheckout img {float:left;margin: 0 0 0 30px}
-.campaignLinks {height:37px;width:300px;overflow:auto;float:left;color:#CCC;margin-left:30px}
-.campaignLinks a {color:#CCC;font-size:0.9em}
+.campaignLinks {height:42px;width:300px;overflow:auto;float:left;color:#CCC;margin-left:30px}
+.campaignLinks a {color:#CCC;font-size:0.9em;border-bottom:0}
 
 /* Button Styling */
 
@@ -105,7 +114,7 @@ a:visited {color:#000;}
 .sexybutton img {margin-right: 5px;vertical-align: text-top;_margin-top: 4px;_vertical-align: text-bottom;}
 .sexybutton img.after {margin-right: 0;margin-left: 5px;}
 .sexybutton {color: #666;}
-.sexybutton:hover {color: #333;}
+.sexybutton:hover {color: #333;border-bottom:0}
 .sexybutton span {background-image: url(images/buttons/button_right.gif);}
 .sexybutton span span {background-image: url(images/buttons/button_left.gif);}
 .sexybutton span.addonep      { background-image: url(images/icons/addonep.png); }
@@ -114,6 +123,3 @@ a:visited {color:#000;}
 .sexybutton span.onepenny     { background-image: url(images/icons/onepenny.png); }
 .sexybutton span.useradd      { background-image: url(images/icons/user_add.png); }
 .sexybutton span.checkout      { background-image: url(images/icons/basket_go.png); }
-
-
-
