Changes needed because of new Blog at http://blog.diddydonation.com

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,8 +43,10 @@
         </div>
 
         <div id="footer" class="subtle smaller">
-            <a href="/faq">FAQ</a>
-            <a href="/about">About</a>
+            <a href="/">Home</a>
+            <a href="http://blog.diddydonation.com/faq">FAQ</a>
+            <a href="http://blog.diddydonation.com/about">About</a>
+            <a href="http://blog.diddydonation.com">Blog</a>
         </div>
 
     </div>
