Added donationinfo page

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -18,7 +18,7 @@
         <span class="amount">{{ d.count }}p</span>
         {{ d.campaign.link|urlizetrunc:60 }}
         <div style="padding: 2px 0 0 25px;">
-        <span class="showClosed">Checkout closed</span> - we need to confirm the beneficiary
+        <span class="showClosed">Checkout closed</span> - we need to confirm the beneficiary or get their payment details.
         </div>
     </div>
   {% endfor %}
