--- a/static/screen.css
+++ b/static/screen.css
@@ -72,7 +72,7 @@ a:visited {color:#000;}
 .pagetitle {height:48px;line-height:48px}
 .pagetitle img {width:48px;height:48px;vertical-align:middle;margin-right:5px}
 
-.amount {background-color: #89605a;color:white;padding:2px;border: 1px solid #000; text-shadow:1px 1px 1px black; border-radius: 10px;-moz-border-radius: 10px;-webkit-border-radius: 10px}
+.amount {background-color: #89605a;color:white;padding:2px;font-weight:normal;border: 1px solid #000; text-shadow:1px 1px 1px black; border-radius: 10px;-moz-border-radius: 10px;-webkit-border-radius: 10px}
 .question {font: italic 1em Georgia, Times, serif;color: #777}
 
 .infoBox {padding: 4px 18px;background:#FFFFCC url("images/icons/info.png") center left no-repeat;color:black;border:1px solid #DEDEDE}
