New blog url now that the diddydonation domain has expired

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
 
         <div id="footer" class="subtle smaller">
             <a href="/">Home</a>
-            <a href="http://blog.diddydonation.com/faq">FAQ</a>
-            <a href="http://blog.diddydonation.com/about">About</a>
-            <a href="http://blog.diddydonation.com">Blog</a>
+            <a href="http://diddydonation.bitmortar.com//faq">FAQ</a>
+            <a href="http://diddydonation.bitmortar.com//about">About</a>
+            <a href="http://diddydonation.bitmortar.com/">Blog</a>
         </div>
 
     </div>
